# MMPredictions

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-google-ads.txt
config/: mmpredictions.example.json
docs/: CHANGELOG.txt  TECHNICAL_DOCUMENTATION.txt  architecture.md  connectors.md  deployment.md  model-methodology.md  user-guide.md
mmpredictions/: __init__.py  app.py  engine.py  gcs_store.py  scheduler_proxy.py  test_app_auth.py  test_confidence.py  test_feature_model.py  test_gcs_store.py  test_handler.py  test_init_db.py  test_prediction.py  test_ratio_stats.py  test_scheduler_proxy.py
mmpredictions/static/: dashboard.css  dashboard.js  index.html
scripts/: setup_google_ads_oauth.py
