[project]
name = "mmpredictions"
version = "0.1.0"
description = "Self-hosted pROAS, pLTV, and pRetention dashboard constructor for MMP cohort data."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "MMPredictions contributors" }
]
keywords = ["marketing", "mmp", "roas", "ltv", "retention", "cohorts", "dashboard"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/J3d1-fm/MMPredictions"
Repository = "https://github.com/J3d1-fm/MMPredictions"

[tool.setuptools]
packages = ["mmpredictions"]
include-package-data = true

[tool.setuptools.package-data]
mmpredictions = ["static/*.html", "static/*.css", "static/*.js"]
